--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -19,6 +19,7 @@
 	}
 }
 //circle bg colors
+/* uncss:ignore start */
 .bg_1{
 	background: $salmon;
 }
@@ -54,6 +55,7 @@
 	background-size: 400px;
 	background-position: center;
 }
+/* uncss:ignore end */
 
 //image positions
 .image_one{
